# tilt-audit

./: .gitignore  CITATION.cff  HANDOFF_DAWN.md  HANDOFF_DAWN_2.md  HANDOFF_DAWN_3.md  NIGHT_LOG.md  NIGHT_LOG_2026-07-04.md  NIGHT_LOG_2026-07-05.md  README.md  RESEARCH_LOG.md  pyproject.toml
ci/: README.md  gates.yml
docs/: OVERNIGHT_2026-07-04_CERTIFIER_TRANSFER_NIGHT.md  PLAN_CERT_LEARNED.md  index.html
figures/: archive_damage.json
lab-notebook/: HANDOFF_DAWN.md  NIGHT_LOG.md  NIGHT_LOG_2026-07-04.md  NIGHT_LOG_2026-07-05.md  README.md
notebooks/: .gitignore  01_the_bench.ipynb  02_sampler_anatomy.ipynb  03_certificates_on_trial.ipynb  04_gold_standards_and_transfer.ipynb  README.md  build_notebooks.py  build_tour.py  overnight_pilot_tour.ipynb
queue/: gen_state.json  gold_production.sh  jobs.jsonl
results/: a1_multiy.jsonl  a2_power.jsonl  a3_amortized.jsonl  a4_remy.jsonl  cert_gscale.jsonl  cert_killtest.jsonl  cert_killtest_remy.jsonl  cert_learned.jsonl  eps_star.jsonl  indepref.jsonl  k2k.jsonl  ksd_trial.jsonl  mixture_contrast.jsonl  modeprobe.jsonl  nfe2.jsonl  ppc.jsonl  r1_autopsy.jsonl  r1_autopsy_b12k_rest.jsonl  t1_controls.jsonl  t1_core.jsonl  t1_exact_T256.jsonl  t1_misspec.jsonl  t1_tsens.jsonl  t1_weak.jsonl  t2_learned.jsonl  t2_pathway_ctrl.jsonl  t3_n512.jsonl  t3_seeds.jsonl  t3_zoom.jsonl  t41_memoryless.jsonl  t42_d128.jsonl  t4_densify.jsonl  tk1_nulls.json  transfer.jsonl  transfer_smoke.jsonl
scripts/: b1_alpha_wrapper.py  cert_digest.py  cert_learned_digest.py  check_gold_is.py  checkpoint_read.py  conductor.py  gate_cert.py  (+41 more)
(+46 files in other folders)
